add um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,6 +9,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci voluptatum labore ratione, aliquid veritatis eius quia neque quam officia odio quibusdam quo quasi sit nobis facilis corporis vero harum reiciendis.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium placeat quos omnis minima dolor excepturi, rerum libero, sunt soluta repellendus veritatis dignissimos id illum vel, at quod incidunt vitae consectetur!</p>
 
 </body>
 </html>
